[gd_scene load_steps=2 format=3 uid="uid://c3fhuj04ns24k"]

[ext_resource type="Script" uid="uid://biygrauso67rd" path="res://npc/ui/setting_ui.gd" id="1_script"]

[node name="SettingUI" type="CanvasLayer"]
layer = 101
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "设置"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="SFXContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/SFXContainer"]
layout_mode = 2
text = "音效音量"

[node name="SFXSlider" type="HSlider" parent="Control/Panel/VBoxContainer/SFXContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="BGMContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/BGMContainer"]
layout_mode = 2
text = "背景音乐音量"

[node name="BGMSlider" type="HSlider" parent="Control/Panel/VBoxContainer/BGMContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="RestartButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "重新开始"

[node name="ExitButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "退出游戏"

[node name="CloseButton" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "返回"
